# backend/docs/swagger.yaml
@@ -22,6 +22,29 @@ definitions:
       error:
         type: string
     type: object
+  models.Group:
+    properties:
+      code:
+        type: string
+      created_at:
+        type: string
+      hike_id:
+        type: integer
+      id:
+        type: integer
+      isPrivate:
+        type: boolean
+      organizer_id:
+        type: integer
+      start_date:
+        type: string
+      updated_at:
+        type: string
+      users:
+        items:
+          $ref: '#/definitions/models.User'
+        type: array
+    type: object
   models.Hike:
     properties:
       created_at:
@@ -58,6 +81,12 @@ definitions:
         type: string
       email:
         type: string
+      group_organizer:
+        $ref: '#/definitions/models.Group'
+      groups:
+        items:
+          $ref: '#/definitions/models.Group'
+        type: array
       id:
         type: integer
       is_verified:
@@ -223,6 +252,119 @@ paths:
       summary: Get advice by receiver
       tags:
       - advice
+  /groups:
+    post:
+      consumes:
+      - application/json
+      description: Create a new group with the input payload
+      parameters:
+      - description: Group Info
+        in: body
+        name: group
+        required: true
+        schema:
+          $ref: '#/definitions/models.Group'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Group'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Create a new group
+      tags:
+      - groups
+  /groups/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a group by its ID
+      parameters:
+      - description: Group ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SuccessResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Delete a group by ID
+      tags:
+      - groups
+    get:
+      consumes:
+      - application/json
+      description: Get details of a group by its ID
+      parameters:
+      - description: Group ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Group'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Get a group by ID
+      tags:
+      - groups
+    patch:
+      consumes:
+      - application/json
+      description: Update details of a group by its ID
+      parameters:
+      - description: Group ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Group Info
+        in: body
+        name: group
+        required: true
+        schema:
+          $ref: '#/definitions/models.Group'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Group'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Update a group by ID
+      tags:
+      - groups
   /hikes:
     get:
       consumes:
