# backend/models/group.go
@@ -4,14 +4,14 @@ import (
 	"time"
 )
 
-type Hike struct {
+type Group struct {
 	ID          uint      `gorm:"primaryKey" json:"id"`
 	CreatedAt   time.Time `json:"created_at"`
 	UpdatedAt   time.Time `json:"updated_at"`
-	Name        string    `gorm:"not null" json:"name"`
-	Description string    `json:"description"`
+	IsPrivate   bool	  `gorm:"default:false" json:"isPrivate"`
+	Code 		string    `json:"code"`
 	StartDate   time.Time `json:"start_date"`
-	EndDate     time.Time `json:"end_date"`
+	Users		[]User    `gorm:"many2many:group_users" json:"users"`
+	HikeID		uint      `json:"hike_id"`
 	OrganizerID uint      `json:"organizer_id"`
-	
 }
